--- a/if.html
+++ b/if.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/css/style.css" rel="stylesheet" />
     <link href="/css/reset.css" rel="stylesheet" />
-    <title>テク単</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>
+    <script src="/js/if.js"></script>
+    <title>テク単 | if文</title>
   </head>
   <body>
-    <h1>Hello, tech-tan!</h1>
+    <h1>Hello, if expressions!</h1>
   </body>
 </html>
