--- a/contents/if/sketch.html
+++ b/contents/if/sketch.html
@@ -1,9 +1,3 @@
-<!-- 
-  step.1 Change the title.
-  step.2 Write sample code.
-  step.3 Sketch with p5.js!
--->
-
 <!DOCTYPE html>
 <html lang="ja">
   <head>
@@ -23,11 +17,17 @@
     />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
     <script src="sketch.js"></script>
-    <title>テク単 | テンプレ</title>
+    <title>テク単 | if文</title>
   </head>
   <body>
     <div id="canvas"></div>
-    <pre><code class="python">print(Hello, tech-tan!)</code></pre>
+    <pre><code class="python">light_color = "RED"
+player_speed = 0
+
+if light_color == "RED":
+  player_speed = 0
+else:
+  player_speed = 10</code></pre>
 
     <div class="bottom-bar">
       <button type="button" onclick="handleReload()">
