✨ コードを動的に挿入できるようにした

--- a/contents/if/sketch.html
+++ b/contents/if/sketch.html
@@ -21,13 +21,7 @@
   </head>
   <body>
     <div id="canvas"></div>
-    <pre><code class="python">light_color = "RED"
-player_speed = 0
-
-if light_color == "RED":
-  player_speed = 0
-else:
-  player_speed = 10</code></pre>
+    <pre><code class="python"></code></pre>
 
     <div class="bottom-bar">
       <button type="button" onclick="handleReload()">
@@ -37,9 +31,5 @@ else:
         <i class="fa-solid fa-play"></i>
       </button>
     </div>
-
-    <script>
-      hljs.initHighlightingOnLoad();
-    </script>
   </body>
 </html>
