--- a/contents/if/sketch.html
+++ b/contents/if/sketch.html
@@ -16,6 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css"
     />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
+    <script src="light.js"></script>
     <script src="sketch.js"></script>
     <title>テク単 | if文</title>
   </head>
