✨ 再生ボタンを実装

--- a/contents/if/sketch.html
+++ b/contents/if/sketch.html
@@ -28,7 +28,7 @@
       <button type="button" onclick="handleReload()">
         <i class="fa-solid fa-rotate-right"></i>
       </button>
-      <button type="button" onclick="handlePlay()">
+      <button type="button" class="playing-button" onclick="handlePlay()">
         <i class="fa-solid fa-play"></i>
       </button>
     </div>
