♻️ playingButton の挙動を修正

--- a/contents/if/sketch.html
+++ b/contents/if/sketch.html
@@ -29,7 +29,7 @@
         <i class="fa-solid fa-rotate-right"></i>
       </button>
       <button type="button" class="playing-button" onclick="handlePlay()">
-        <i class="fa-solid fa-play"></i>
+        <i class="fa-solid fa-pause"></i>
       </button>
     </div>
   </body>
