--- a/contents/if/sketch.html
+++ b/contents/if/sketch.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sawarabi+Gothic&display=swap"
+      rel="stylesheet"
+    />
     <link href="../../css/reset.css" rel="stylesheet" />
     <link href="../../css/style.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>
@@ -21,6 +27,7 @@
     <title>テク単 | if文</title>
   </head>
   <body>
+    <div class="top-bar">if文</div>
     <div id="canvas"></div>
     <pre><code class="python"></code></pre>
 
