--- a/contents/addition/sketch.html
+++ b/contents/addition/sketch.html
@@ -18,10 +18,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
     <script src="light.js"></script>
     <script src="sketch.js"></script>
-    <title>テク単 | XX</title>
+    <title>テク単 | +</title>
   </head>
   <body>
-    <div class="top-bar">XX</div>
+    <div class="top-bar">+</div>
     <div id="canvas"></div>
     <pre><code class="python"></code></pre>
 
