--- a/contents/print/sketch.html
+++ b/contents/print/sketch.html
@@ -28,10 +28,10 @@
           type="text"
           name="message"
           id="message"
-          placeholder="ｺﾝﾆﾁﾊ"
+          placeholder="ﾅﾆｶ ｶｲﾃﾐﾖｳ"
           required
         />
-        <button type="button" onclick="console.log('あああ')">送信！</button>
+        <button type="button" onclick="handleSubmit()">送信！</button>
       </form>
     </div>
     <pre><code class="python"></code></pre>
