--- a/contents/remainder/sketch.html
+++ b/contents/remainder/sketch.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="../../css/reset.css" rel="stylesheet" />
     <link href="../../css/style.css" rel="stylesheet" />
+    <link href="sketch.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>
     <link
       rel="stylesheet"
@@ -21,7 +22,9 @@
   </head>
   <body>
     <div class="top-bar">//</div>
-    <div id="canvas"></div>
+    <div id="canvas">
+      <button type="button" onclick="handleDivide()">分ける！</button>
+    </div>
     <pre><code class="python"></code></pre>
 
     <div class="bottom-bar">
