--- a/contents/remainder/sketch.html
+++ b/contents/remainder/sketch.html
@@ -18,10 +18,10 @@
     />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
     <script src="sketch.js"></script>
-    <title>テク単 | //</title>
+    <title>テク単 | //と%の計算</title>
   </head>
   <body>
-    <div class="top-bar">//</div>
+    <div class="top-bar">//と%の計算</div>
     <div id="canvas">
       <button type="button" onclick="handleDivide()">分ける！</button>
     </div>
