--- a/contents/plusequal/sketch.html
+++ b/contents/plusequal/sketch.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="../../css/reset.css" rel="stylesheet" />
     <link href="../../css/style.css" rel="stylesheet" />
+    <link href="sketch.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>
     <link
       rel="stylesheet"
@@ -17,11 +18,21 @@
     />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
     <script src="sketch.js"></script>
-    <title>テク単 | +=</title>
+    <title>テク単 | +=と-=の計算</title>
   </head>
   <body>
-    <div class="top-bar">+=</div>
-    <div id="canvas"></div>
+    <div class="top-bar">+=と-=の計算</div>
+    <div id="canvas">
+      <h2 class="enemy-hp">HP: 20</h2>
+      <div class="command-container">
+        <button class="command-button" onclick="handleAttack()">
+          こうげき
+        </button>
+        <button class="command-button" onclick="handleHealing()">
+          かいふく
+        </button>
+      </div>
+    </div>
     <pre><code class="python"></code></pre>
 
     <div class="bottom-bar">
@@ -31,7 +42,7 @@
     </div>
 
     <dialog>
-      <p>XX</p>
+      <p>わざを選んで敵を倒そう！</p>
       <button class="ok-button">OK</button>
     </dialog>
 
