✨ スライムを倒すときの挙動

--- a/contents/plusequal/sketch.html
+++ b/contents/plusequal/sketch.html
@@ -23,7 +23,10 @@
   <body>
     <div class="top-bar">+=と-=の計算</div>
     <div id="canvas">
-      <h2 class="enemy-hp">HP: 20</h2>
+      <div class="desc-container">
+        <h2 class="enemy-name">スライムがあらわれた ▼</h2>
+        <h2 class="enemy-hp">HP: 20</h2>
+      </div>
       <div class="command-container">
         <button class="command-button" onclick="handleAttack()">
           こうげき
