--- a/contents/remainder/sketch.html
+++ b/contents/remainder/sketch.html
@@ -23,7 +23,7 @@
   <body>
     <div class="top-bar">//と%の計算</div>
     <div id="canvas">
-      <button type="button" onclick="handleDivide()">仲良く分ける</button>
+      <button type="button" onclick="handleDivide()">なかよく分ける</button>
     </div>
     <pre><code class="python"></code></pre>
 
@@ -34,7 +34,7 @@
     </div>
 
     <dialog>
-      <p>割り算をしよう！</p>
+      <p>なかよく分けよう！</p>
       <button class="ok-button">OK</button>
     </dialog>
 
