--- a/contents/plusequal/sketch.html
+++ b/contents/plusequal/sketch.html
@@ -45,7 +45,7 @@
     </div>
 
     <dialog>
-      <p>わざを選んで敵を倒そう！</p>
+      <p>てきを倒そう！</p>
       <button class="ok-button">OK</button>
     </dialog>
 
